dhall/tests/type-inference/failure/unit/MergeEmptyNeedsDirectAnnotation1.txt
Type error: error: MergeEmptyNeedsAnnotation
 --> <current file>:1:14
  |
1 | \(x: <>) -> (merge {=} x) : Bool
  |              ^^^^^^^^^^^ MergeEmptyNeedsAnnotation
  |
